# bookish-tribble

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: dev-reset.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  focusflow-debug.keystore  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: init.sql
src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
src/components/: AddTaskForm.tsx  BottomNav.tsx  Confetti.tsx  ExportBackupButton.tsx  ImportBackupButton.tsx  MainView.tsx  MobileAddProjectModal.tsx  MobileAddTaskModal.tsx  MobileFAB.tsx  MobileHeader.tsx  MobileSidebar.tsx  ReminderToast.tsx  SearchBar.tsx  SubtaskList.tsx  SwipeHandler.tsx  TaskCard.tsx  Things3TaskRow.tsx  TopTabs.tsx  TrelloColumn.tsx  useDatabase.ts
src/hooks/: useDatabase.ts  useFinance.ts
src/lib/: constants.ts  logger.ts  supabase.ts  tauri.ts
src/types/: ui.ts
src/utils/: naturalLanguage.ts  tasks.ts
src/views/: CalendarView.tsx  FocusView.tsx  MainView.tsx  NotesView.tsx  SettingsView.tsx  StatsView.tsx  WalletView.tsx  WeeklyReviewView.tsx
