[package]
name = "focusflow-tauri"
version = "0.2.0"
description = "FocusFlow - Personal Task Manager"
authors = ["you"]
license = ""
repository = ""
default-run = "focusflow-tauri"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
